src/core/generator/tests/snapshots/config_generator_spec__src__core__generator__tests__fixtures__generator__deezer.json.snap
---
source: src/core/generator/tests/config_generator_spec.rs
expression: config.to_sdl()
---
schema @server @upstream(baseURL: "https://api.deezer.com") {
  query: Query
}

type Album {
  cover: String
  cover_big: String
  cover_medium: String
  cover_small: String
  cover_xl: String
  id: Int
  md5_image: String
  title: String
  tracklist: String
  type: String
}

type Artist {
  id: Int
  link: String
  name: String
  picture: String
  picture_big: String
  picture_medium: String
  picture_small: String
  picture_xl: String
  radio: Boolean
  share: String
  tracklist: String
  type: String
}

type Contributor {
  id: Int
  link: String
  name: String
  picture: String
  picture_big: String
  picture_medium: String
  picture_small: String
  picture_xl: String
  radio: Boolean
  role: String
  share: String
  tracklist: String
  type: String
}

type Creator {
  id: Int
  name: String
  tracklist: String
  type: String
}

type Daum {
  album: Album
  artist: T44
  duration: Int
  explicit_content_cover: Int
  explicit_content_lyrics: Int
  explicit_lyrics: Boolean
  id: Int
  link: String
  md5_image: String
  preview: String
  rank: Int
  readable: Boolean
  time_add: Int
  title: String
  title_short: String
  title_version: String
  type: String
}

type Editorial {
  data: [T146]
  total: Int
}

type Genre {
  data: [T8]
}

type Playlist {
  checksum: String
  collaborative: Boolean
  creation_date: String
  creator: Creator
  description: String
  duration: Int
  fans: Int
  id: Int
  is_loved_track: Boolean
  link: String
  md5_image: String
  nb_tracks: Int
  picture: String
  picture_big: String
  picture_medium: String
  picture_small: String
  picture_type: String
  picture_xl: String
  public: Boolean
  share: String
  title: String
  tracklist: String
  tracks: Track
  type: String
}

type Query {
  album(p1: Int!): T40 @http(path: "/album/{{.args.p1}}")
  artist(p1: Int!): T41 @http(path: "/artist/{{.args.p1}}")
  editorial: Editorial @http(path: "/editorial")
  playlist(p1: Int!): Playlist @http(path: "/playlist/{{.args.p1}}")
  track(p1: Int!): T5 @http(path: "/track/{{.args.p1}}")
  user(p1: Int!): User @http(path: "/user/{{.args.p1}}")
}

type T146 {
  id: Int
  name: String
  picture: String
  picture_big: String
  picture_medium: String
  picture_small: String
  picture_xl: String
  type: String
}

type T2 {
  cover: String
  cover_big: String
  cover_medium: String
  cover_small: String
  cover_xl: String
  id: Int
  link: String
  md5_image: String
  release_date: String
  title: String
  tracklist: String
  type: String
}

type T38 {
  album: Album
  artist: Creator
  duration: Int
  explicit_content_cover: Int
  explicit_content_lyrics: Int
  explicit_lyrics: Boolean
  id: Int
  link: String
  md5_image: String
  preview: String
  rank: Int
  readable: Boolean
  title: String
  title_short: String
  title_version: String
  type: String
}

type T39 {
  data: [T38]
}

type T40 {
  artist: T6
  available: Boolean
  contributors: [Contributor]
  cover: String
  cover_big: String
  cover_medium: String
  cover_small: String
  cover_xl: String
  duration: Int
  explicit_content_cover: Int
  explicit_content_lyrics: Int
  explicit_lyrics: Boolean
  fans: Int
  genre_id: Int
  genres: Genre
  id: Int
  label: String
  link: String
  md5_image: String
  nb_tracks: Int
  record_type: String
  release_date: String
  share: String
  title: String
  tracklist: String
  tracks: T39
  type: String
  upc: String
}

type T41 {
  id: Int
  link: String
  name: String
  nb_album: Int
  nb_fan: Int
  picture: String
  picture_big: String
  picture_medium: String
  picture_small: String
  picture_xl: String
  radio: Boolean
  share: String
  tracklist: String
  type: String
}

type T44 {
  id: Int
  link: String
  name: String
  tracklist: String
  type: String
}

type T5 {
  album: T2
  artist: Artist
  available_countries: [String]
  bpm: Int
  contributors: [Contributor]
  disk_number: Int
  duration: Int
  explicit_content_cover: Int
  explicit_content_lyrics: Int
  explicit_lyrics: Boolean
  gain: Int
  id: Int
  isrc: String
  link: String
  md5_image: String
  preview: String
  rank: Int
  readable: Boolean
  release_date: String
  share: String
  title: String
  title_short: String
  title_version: String
  track_position: Int
  type: String
}

type T6 {
  id: Int
  name: String
  picture: String
  picture_big: String
  picture_medium: String
  picture_small: String
  picture_xl: String
  tracklist: String
  type: String
}

type T8 {
  id: Int
  name: String
  picture: String
  type: String
}

type Track {
  checksum: String
  data: [Daum]
}

type User {
  country: String
  id: Int
  link: String
  name: String
  picture: String
  picture_big: String
  picture_medium: String
  picture_small: String
  picture_xl: String
  tracklist: String
  type: String
}
