src/core/generator/tests/snapshots/config_generator_spec__src__core__generator__tests__fixtures__generator__dummyjson_product.json.snap
---
source: src/core/generator/tests/config_generator_spec.rs
expression: config.to_sdl()
---
schema @server @upstream(baseURL: "https://dummyjson.com") {
  query: Query
}

type Category {
  name: String
  slug: String
  url: String
}

type Dimension {
  depth: Int
  height: Int
  width: Int
}

type Meum {
  barcode: String
  createdAt: String
  qrCode: String
  updatedAt: String
}

type Product {
  availabilityStatus: String
  brand: String
  category: String
  description: String
  dimensions: Dimension
  discountPercentage: Int
  id: Int
  images: [String]
  meta: Meum
  minimumOrderQuantity: Int
  price: Int
  rating: Int
  returnPolicy: String
  reviews: [Review]
  shippingInformation: String
  sku: String
  stock: Int
  tags: [String]
  thumbnail: String
  title: String
  warrantyInformation: String
  weight: Int
}

type ProductSearch {
  limit: Int
  products: [Product]
  skip: Int
  total: Int
}

type Query {
  categories: [Category] @http(path: "/products/categories")
  categoryList: [String] @http(path: "/products/category-list")
  product(p1: Int!): Product @http(path: "/products/{{.args.p1}}")
  productList(order: String, sortBy: String): ProductSearch @http(path: "/products", query: [{key: "sortBy", value: "{{.args.sortBy}}"}, {key: "order", value: "{{.args.order}}"}])
  productSearch(q: String): ProductSearch @http(path: "/products/search", query: [{key: "q", value: "{{.args.q}}"}])
}

type Review {
  comment: String
  date: String
  rating: Int
  reviewerEmail: String
  reviewerName: String
}
