src/core/generator/tests/snapshots/config_generator_spec__src__core__generator__tests__fixtures__generator__dummyjson_quotes.json.snap
---
source: src/core/generator/tests/config_generator_spec.rs
expression: config.to_sdl()
---
schema @server @upstream(baseURL: "https://dummyjson.com") {
  query: Query
}

type Query {
  quote(p1: Int!): RandomQuote @http(path: "/quotes/{{.args.p1}}")
  quoteList: QuoteList @http(path: "/quotes")
  randomQuotes(p1: Int!): [RandomQuote] @http(path: "/quotes/random/{{.args.p1}}")
}

type QuoteList {
  limit: Int
  quotes: [RandomQuote]
  skip: Int
  total: Int
}

type RandomQuote {
  author: String
  id: Int
  quote: String
}
