src/core/generator/tests/snapshots/config_generator_spec__src__core__generator__tests__fixtures__generator__json_proto_mix_config.json.snap
---
source: src/core/generator/tests/config_generator_spec.rs
expression: config.to_sdl()
---
schema @server @upstream(baseURL: "https://jsonplaceholder.typicode.com") @link(src: "../../../../../../tailcall-fixtures/fixtures/protobuf/news.proto", type: Protobuf) {
  query: Query
}

input Id @tag(id: "news.NewsId") {
  id: Int
}

input news__MultipleNewsId @tag(id: "news.MultipleNewsId") {
  ids: [Id]
}

enum news__Status {
  DELETED
  DRAFT
  PUBLISHED
}

type Address {
  city: String
  geo: Geo
  street: String
  suite: String
  zipcode: String
}

type Company {
  bs: String
  catchPhrase: String
  name: String
}

type Geo {
  lat: String
  lng: String
}

type NewsNewsServiceGetMultipleNew @tag(id: "news.NewsList") {
  news: [NewsNewsServiceGetNew]
}

type NewsNewsServiceGetNew @tag(id: "news.News") {
  body: String
  id: Int
  postImage: String
  status: news__Status
  title: String
}

type Post {
  body: String
  id: Int
  title: String
  userId: Int
}

type Query {
  news__NewsService__AddNews(news: news__News!): NewsNewsServiceGetNew! @grpc(body: "{{.args.news}}", method: "news.NewsService.AddNews")
  news__NewsService__DeleteNews(newsId: news__NewsId!): Empty! @grpc(body: "{{.args.newsId}}", method: "news.NewsService.DeleteNews")
  news__NewsService__EditNews(news: news__News!): NewsNewsServiceGetNew! @grpc(body: "{{.args.news}}", method: "news.NewsService.EditNews")
  news__NewsService__GetAllNews: NewsNewsServiceGetMultipleNew! @grpc(method: "news.NewsService.GetAllNews")
  news__NewsService__GetMultipleNews(multipleNewsId: news__MultipleNewsId!): NewsNewsServiceGetMultipleNew! @grpc(body: "{{.args.multipleNewsId}}", method: "news.NewsService.GetMultipleNews")
  news__NewsService__GetNews(newsId: news__NewsId!): NewsNewsServiceGetNew! @grpc(body: "{{.args.newsId}}", method: "news.NewsService.GetNews")
  post(p1: Int!): Post @http(path: "/posts/{{.args.p1}}")
  posts: [Post] @http(path: "/posts")
  user(p1: Int!): User @http(path: "/users/{{.args.p1}}")
  users: [User] @http(path: "/users")
}

type User {
  address: Address
  company: Company
  email: String
  id: Int
  name: String
  phone: String
  username: String
  website: String
}
