src/core/generator/tests/snapshots/config_generator_spec__src__core__generator__tests__fixtures__generator__reqres.json.snap
---
source: src/core/generator/tests/config_generator_spec.rs
expression: config.to_sdl()
---
schema @server @upstream(baseURL: "https://reqres.in") {
  query: Query
}

type Daum {
  avatar: String
  email: String
  first_name: String
  id: Int
  last_name: String
}

type Query {
  user(p1: Int!): T6 @http(path: "/api/users/{{.args.p1}}")
  users(page: Int): User @http(path: "/api/users", query: [{key: "page", value: "{{.args.page}}"}])
}

type Support {
  text: String
  url: String
}

type T6 {
  data: Daum
  support: Support
}

type User {
  data: [Daum]
  page: Int
  per_page: Int
  support: Support
  total: Int
  total_pages: Int
}
