src/core/generator/tests/snapshots/config_generator_spec__src__core__generator__tests__fixtures__generator__simple-json.json.snap
---
source: src/core/generator/tests/config_generator_spec.rs
expression: cfg_module.config.to_sdl()
---
schema @server(hostname: "0.0.0.0", port: 8000) @upstream(baseURL: "https://jsonplaceholder.typicode.com", httpCache: 42) @link(src: "../../../../../../tailcall-fixtures/fixtures/protobuf/news.proto", type: Protobuf) {
  query: Query
}

input news__MultipleNewsId @tag(id: "news.MultipleNewsId") {
  ids: [news__NewsId]
}

input news__News @tag(id: "news.News") {
  body: String
  id: Int
  postImage: String
  status: news__Status
  title: String
}

input news__NewsId @tag(id: "news.NewsId") {
  id: Int
}

enum news__Status {
  DELETED
  DRAFT
  PUBLISHED
}

type F1 {
  body: String
  id: Int
  title: String
  userId: Int
}

type Post {
  body: String!
  id: Int!
  title: String!
  user: User @http(path: "/users/{{.value.userId}}")
  userId: Int!
}

type Query {
  f1(p1: Int!): F1 @http(path: "/posts/{{.args.p1}}")
  news__NewsService__AddNews(news: news__News!): news__News! @grpc(body: "{{.args.news}}", method: "news.NewsService.AddNews")
  news__NewsService__DeleteNews(newsId: news__NewsId!): Empty! @grpc(body: "{{.args.newsId}}", method: "news.NewsService.DeleteNews")
  news__NewsService__EditNews(news: news__News!): news__News! @grpc(body: "{{.args.news}}", method: "news.NewsService.EditNews")
  news__NewsService__GetAllNews: news__NewsList! @grpc(method: "news.NewsService.GetAllNews")
  news__NewsService__GetMultipleNews(multipleNewsId: news__MultipleNewsId!): news__NewsList! @grpc(body: "{{.args.multipleNewsId}}", method: "news.NewsService.GetMultipleNews")
  news__NewsService__GetNews(newsId: news__NewsId!): news__News! @grpc(body: "{{.args.newsId}}", method: "news.NewsService.GetNews")
  post(id: Int!): Post @http(path: "/posts/{{.args.id}}")
  posts: [Post] @http(path: "/posts")
  user(id: Int!): User @http(path: "/users/{{.args.id}}")
  users: [User] @http(path: "/users")
}

type User {
  email: String!
  id: Int!
  name: String!
  phone: String
  username: String!
  website: String @expr(body: "/users/website/{{.value.username}}")
}

type news__NewsList @tag(id: "news.NewsList") {
  news: [news__News]
}
